<resources>
    <string name="app_name">EngiNerd</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_login">Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Sign up</string>
    <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
    <string name="give_a_rating">Give a Rating</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>
    <string name="userDetails">User Details</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="college_details">College Details</string>
    <string name="enter_your_college_name">Enter your college name</string>
    <string name="enter_your_branch">Select your branch</string>
    <string name="already_registered_sign_in_here">Already registered? Sign In here</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_main2">EngiNerd</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="college_photo">College Photo</string>
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="about_us">About us</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="select_your_birthday">Select your birthday:</string>
    <string name="title_activity_main">EngiNerd</string>
    <string name="signin">Sign In</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="search_here">Search Colleges…</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="infrastucture">Infrastucture</string>
    <string name="placement">Placement</string>
    <string name="faculty">Faculty</string>
    <string name="crowd">Crowd</string>
    <string name="submit">Submit</string>
    <string name="comments">Comments …</string>
    <string name="username">UserName</string>
    <string name="anonymous">Anonymous</string>
    <string name="select_your_college">Select your college</string>
    <string name="email">Email</string>
    <string name="about">Our aim is to provide students with an informed view of engineering colleges!</string>
    <string name="our_team">Our Team</string>
    <string name="feedback">Feel free to contact us regarding any queries or feedback! :)</string>

</resources>
