<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@mipmap/ic_home_black_24dp"
            android:title="@string/home"/>

        <item android:id="@+id/nav_account"
            android:icon="@mipmap/ic_person_black_24dp"
            android:title="@string/my_account"/>

        <item android:id="@+id/nav_rating"
            android:icon="@mipmap/ic_grade_black_24dp"
            android:title="@string/give_a_rating"/>


        <item android:title="Other Options">
            <menu>
                <item android:id="@+id/nav_about"
                    android:icon="@mipmap/ic_info_black_24dp"
                    android:title="@string/about_us"/>

                <item android:id="@+id/nav_logOut"
                    android:icon="@mipmap/ic_power_settings_new_black_24dp"
                    android:title="@string/log_out"/>
            </menu>
        </item>
    </group>
</menu>