<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.raveena.myapplication.About"
    android:weightSum="1">

    <include layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:text="@string/about_us"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/our_team"
            android:textColor="@color/bodyColor"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_marginTop="25dp"
            android:src="@drawable/c1"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />


        <ImageView
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:layout_marginTop="25dp"
            android:src="@drawable/rav"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/feedback"
            android:textAppearance="?android:attr/textAppearanceMedium"
             />

    <Button
        android:id="@+id/button"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/email"
        android:textColor="@color/tabIndicator" />

    </LinearLayout>
</LinearLayout>