<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.raveena.myapplication.RatingActivity">

    <include layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/shadow" />

    <TextView
        android:id="@+id/college"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAlignment="center"
        android:textAppearance="?android:textAppearanceLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/infra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/infrastucture"
                android:textAppearance="?android:textAppearanceMedium" />

            <RatingBar
                android:id="@+id/rateInfra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/placement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/placement"
                android:textAppearance="?android:textAppearanceMedium" />

            <RatingBar
                android:id="@+id/ratePlacement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:stepSize="0.5"
                android:text="@string/faculty"
                android:textAppearance="?android:textAppearanceMedium" />

            <RatingBar
                android:id="@+id/rateFaculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="0.5" />

            <TextView
                android:id="@+id/crowd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/crowd"
                android:textAppearance="?android:textAppearanceMedium" />

            <RatingBar
                android:id="@+id/rateCrowd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="0.5" />

            <EditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@drawable/input_outline"
                android:hint="@string/comments"
                android:inputType="textMultiLine"
                android:paddingBottom="40dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submit"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:textColor="@color/tabIndicator" />

                <Button
                    android:id="@+id/anon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:text="@string/anonymous"
                    android:textColor="@color/tabIndicator"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
